[tool.poetry]
name = "rangeindex"
version = "0.7.0"
description = ""
authors = ["Theo Walker <theo.ca.walker@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = ">=1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target_version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.build
    | \.dist
    | \.git
    | \.github
    | \.hg
    | \.ipynb_checkpoints
    | \.pytest_cache
    | \.rangeindex.egg-info
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
