[tool.poetry]
name = "rangeindex"
version = "0.9.3"
description = ""
authors = ["Theo Walker <theo.ca.walker@gmail.com>"]
repository = "https://github.com/manimino/rangeindex/"
documentation = "https://pypi.org/project/rangeindex/"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pandas = {version = ">=1.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pandas = ">=1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target_version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.build
    | \.dist
    | \.git
    | \.github
    | \.hg
    | \.ipynb_checkpoints
    | \.pytest_cache
    | \.rangeindex.egg-info
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
